Fixed some spacing on group issues listing
Updated changelog

--- a/editor/src/app/groups/group-issues/group-issues.component.css
+++ b/editor/src/app/groups/group-issues/group-issues.component.css
@@ -58,3 +58,7 @@ tangy-location {
 .show-conflicts {
   margin-right: 1em;
 }
+
+.secondarySpacer {
+  margin-left: 0.5em;
+}
